<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/ads_cat"
        android:title="@string/ad_cat1">
        <menu>
            <item
                android:id="@+id/id_my_ads"
                android:title="@string/ad_my_ads" />
            <item
                android:id="@+id/id_car"
                android:title="@string/ad_car" />
            <item
                android:id="@+id/id_pc"
                android:title="@string/ad_pc" />
            <item
                android:id="@+id/id_sp"
                android:title="@string/ad_smartphone" />
            <item
                android:id="@+id/id_dm"
                android:title="@string/ad_dm" />
        </menu>
    </item>

    <item
        android:id="@+id/acc_cat"
        android:title="@string/ad_cat2">
        <menu>
            <item
                android:id="@+id/id_remove_ads"
                android:title="@string/remove_ads" />
            <item
                android:id="@+id/id_my_sign_up"
                android:title="@string/ad_sign_up" />
            <item
                android:id="@+id/id_sign_in"
                android:title="@string/ad_sign_in" />
            <item
                android:id="@+id/id_sign_out"
                android:title="@string/ad_sign_out" />

        </menu>
    </item>

</menu>