<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_up_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_email_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_dialog"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/ed_password_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_email_sign"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:ems="10"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="7dp" />


    <Button
        android:id="@+id/btn_forget_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sign_up_in"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/forget_sign"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/visible_un_visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="57pt"
        android:layout_marginRight="17dp"
        app:srcCompat="@drawable/ic_eye" />

    <TextView
        android:id="@+id/tv_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_dialog"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:text="@string/password_reset_error"
        android:textColor="#CF0000"
        android:visibility="gone" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sign_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_password_sign"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="Button" />

    <Button

        android:id="@+id/btn_sign_up_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sign_with_google"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/ad_sign_up"
        android:textColor="@color/black" />

</RelativeLayout>